Add app challenge entity and resource provider
- Update signature header validation
- Update firebase dto message
